--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "swig": "^1.3.2",
     "co-body": "^0.0.1",
     "ws" : "*",
-    "mocha" : "*"
+    "mocha" : "*",
+    "passport" : "*"
   },
   "devDependencies": {
     "supertest": "^0.12.1",
