start of signalling spec - transport agnostic

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "co-body": "^0.0.1",
     "ws" : "*",
     "mocha" : "*",
-    "passport" : "*"
+    "passport" : "*",
+    "redis" : "*"
   },
   "devDependencies": {
     "supertest": "^0.12.1",
